apps/tikto/base/api-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: tikto-profile-api
  labels:
    app.kubernetes.io/name: tikto
    app.kubernetes.io/component: profile-api
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: tikto
    app.kubernetes.io/component: profile-api
  ports:
    - name: http
      port: 4100
      targetPort: http
---
apiVersion: v1
kind: Service
metadata:
  name: tikto-tasks-api
  labels:
    app.kubernetes.io/name: tikto
    app.kubernetes.io/component: tasks-api
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: tikto
    app.kubernetes.io/component: tasks-api
  ports:
    - name: http
      port: 4200
      targetPort: http
---
apiVersion: v1
kind: Service
metadata:
  name: tikto-calendar-api
  labels:
    app.kubernetes.io/name: tikto
    app.kubernetes.io/component: calendar-api
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: tikto
    app.kubernetes.io/component: calendar-api
  ports:
    - name: http
      port: 4300
      targetPort: http
---
apiVersion: v1
kind: Service
metadata:
  name: tikto-dashboard-api
  labels:
    app.kubernetes.io/name: tikto
    app.kubernetes.io/component: dashboard-api
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: tikto
    app.kubernetes.io/component: dashboard-api
  ports:
    - name: http
      port: 4400
      targetPort: http
---
apiVersion: v1
kind: Service
metadata:
  name: tikto-gateway
  labels:
    app.kubernetes.io/name: tikto
    app.kubernetes.io/component: gateway
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: tikto
    app.kubernetes.io/component: gateway
  ports:
    - name: http
      port: 4000
      targetPort: http
