apps/tikto/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: tikto
  labels:
    app.kubernetes.io/name: tikto
    app.kubernetes.io/component: web
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: tikto
    app.kubernetes.io/component: web
  ports:
    - name: http
      port: 80
      targetPort: http
